# apk-re-agents

./: .dockerignore  .gitignore  Dockerfile.coordinator  apk-re-framework.md  docker-compose.yml  pyproject.toml
docs/: CHEATSHEET.md  DESIGN.md  TODO-prompt-tuning.md
docs/plans/: 2026-03-07-project-scaffolding-and-coordinator.md  2026-03-09-prompt-tuning-plan.md  2026-03-09-prompt-tuning-round2.md
src/apk_re/: config.py  main.py  schemas.py
src/apk_re/agents/api_extractor/: Dockerfile  server.py
src/apk_re/agents/base/: base_agent.py
src/apk_re/agents/code_analyzer/: Dockerfile  requirements.txt  server.py
src/apk_re/agents/manifest_analyzer/: Dockerfile  server.py
src/apk_re/agents/mobsf_analyzer/: Dockerfile  requirements.txt  server.py
src/apk_re/agents/network_mapper/: Dockerfile  server.py
src/apk_re/agents/report_synthesizer/: Dockerfile  server.py
src/apk_re/agents/string_extractor/: Dockerfile  server.py
src/apk_re/agents/unpacker/: Dockerfile  server.py
src/apk_re/coordinator/: agent_manager.py  api.py  pipeline.py
tests/: test_agent_manager.py  test_api.py  test_api_extractor.py  test_base_agent.py  test_code_analyzer.py  test_config.py  test_manifest_analyzer.py  test_network_mapper.py  test_ollama_helper.py  test_pipeline.py  test_report_synthesizer.py  test_schemas.py  test_string_extractor.py  test_unpacker.py
